--- a/flowerbox/styles.css
+++ b/flowerbox/styles.css
@@ -28,3 +28,17 @@ body {
     left: 65%;
     justify-content: right;
 }
+
+#flower-cards {
+    display: flex;
+    justify-content: space-around;
+    width: 80%;
+    margin: 10px auto;
+
+}
+
+.flower-card {
+    width: 30%;
+    height: 400px;
+    background-color: grey;
+}
